--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "template": "scr/template.png",
     "map": "scr/map3.png",
-    "avatar": "C:/Users/18505/Downloads/126076978.jpg",
-    "username": "³Ì×ÓÍ©22327021",
+    "avatar": "",
+    "username": "",
     "date": "2024/11/17",
     "end_time": "22:54",
     "total_km": [
