--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
     "template": "scr/template-1.png",
-    "map": "scr/map3.png",
+    "map": "scr/zh3.jpg",
     "avatar": "scr/Vex.jpg",
     "username": "j",
     "date": "2025/05/19",
-    "end_time": "20:21",
+    "end_time": "21:10",
     "total_km": [
         "3.02",
         "3.3"
